--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "mongoose": "^8.0.1"
